@@ -19,6 +19,7 @@ import org.springframework.stereotype.Service;
 import org.springframework.transaction.annotation.Transactional;
 import org.springframework.transaction.support.TransactionSynchronization;
 import org.springframework.transaction.support.TransactionSynchronizationManager;
+import org.springframework.util.CollectionUtils;
 
 import java.io.ByteArrayInputStream;
 import java.io.IOException;
@@ -29,8 +30,8 @@ import java.util.*;
 
 /**
  * Core service that orchestrates the multi-step processing pipeline for a single file.
- * This includes validation, bucket-scoped duplicate checking, content handling,
- * and preparation for the final upload step.
+ * This includes validation, bucket-scoped duplicate checking, content handling via {@link FileHandler}s,
+ * and preparation for the final upload step to GroundX.
  */
 @Slf4j
 @Service
@@ -50,43 +51,44 @@ public class DocumentPipelineService {
 
     private static final UUID NIL_UUID = UUID.fromString("00000000-0000-0000-0000-000000000000");
 
+    /**
+     * Executes the entire processing pipeline for a single file identified by its {@link FileMaster} ID.
+     * This method is transactional and serves as the main entry point for file processing workers.
+     *
+     * @param fileMasterId The ID of the {@link FileMaster} to process.
+     */
     @Transactional
     public void runPipeline(final Long fileMasterId) {
-        log.info("Starting document pipeline for FileMaster ID: {}", fileMasterId);
+        log.info("Beginning document pipeline for FileMaster ID: {}", fileMasterId);
         final FileMaster fileMaster = fileMasterRepository.findById(fileMasterId)
                 .orElseThrow(() -> new IllegalStateException("FileMaster not found with ID: " + fileMasterId));
 
         Path tempFile = null;
         try {
             tempFile = Files.createTempFile("pipeline-" + fileMasterId + "-", "-" + fileMaster.getFileName());
+            log.debug("Created temporary file for pipeline processing: {}", tempFile.toAbsolutePath());
 
             if (!prepareAndValidateFile(fileMaster, tempFile)) {
                 return;
             }
-
             if (handleDuplicates(fileMaster)) {
                 return;
             }
 
             List<ExtractedFileItem> newItems = findAndExecuteHandler(fileMaster, tempFile);
-
-            if (newItems == null) {
+            if (CollectionUtils.isEmpty(newItems)) {
                 return;
             }
 
-            if (newItems.isEmpty()) {
-                createOrUpdateGxMasterRecord(fileMaster, null);
-            } else {
-                processHandlerResults(newItems, fileMaster);
-            }
+            log.info("File handler produced {} new item(s) for FileMaster ID: {}", newItems.size(), fileMasterId);
+            processHandlerResults(newItems, fileMaster);
 
             if (Arrays.asList(FileProcessingStatus.IN_PROGRESS, FileProcessingStatus.QUEUED).contains(fileMaster.getFileProcessingStatus())) {
                 fileMaster.setFileProcessingStatus(FileProcessingStatus.COMPLETED);
                 log.info("Pipeline completed successfully for FileMaster ID: {}.", fileMasterId);
             }
-
         } catch (final Exception e) {
-            log.error("A critical exception occurred during the processing pipeline for FileMaster ID: {}.", fileMasterId, e);
+            log.error("A critical exception aborted the pipeline for FileMaster ID: {}.", fileMasterId, e);
             jobLifecycleManager.failJobForFileProcessing(fileMasterId, e.getMessage());
             throw new MessageProcessingFailedException("Pipeline processing failed for FileMaster ID " + fileMasterId, e);
         } finally {
@@ -101,13 +103,17 @@ public class DocumentPipelineService {
         }
     }
 
+    /**
+     * Downloads the file from S3, validates its size and name, and computes its initial hash.
+     */
     private boolean prepareAndValidateFile(FileMaster fileMaster, Path tempFile) throws IOException {
+        log.debug("Downloading S3 object '{}' to temporary file for FileMaster ID: {}", fileMaster.getFileLocation(), fileMaster.getId());
         final long bytesDownloaded = Files.copy(s3StorageService.downloadStream(fileMaster.getFileLocation()), tempFile, StandardCopyOption.REPLACE_EXISTING);
         fileMaster.setFileSize(bytesDownloaded);
 
         final String validationError = validationService.validateFile(fileMaster.getFileName(), bytesDownloaded);
         if (validationError != null) {
-            log.warn("[IGNORED] FileMaster ID {} is invalid. Reason: {}", fileMaster.getId(), validationError);
+            log.warn("FileMaster ID {} is invalid and will be ignored. Reason: {}", fileMaster.getId(), validationError);
             updateFileStatusToIgnored(fileMaster, validationError, bytesDownloaded);
             return false;
         }
@@ -122,73 +128,60 @@ public class DocumentPipelineService {
     }
 
     /**
-     * Handles duplicate files within the same bucket, with nuanced logic for reprocessing failures.
+     * Handles duplicate file detection within the same bucket, gracefully managing historical duplicates
+     * and concurrent race conditions.
      *
      * @param fileMaster The current file being processed.
-     * @return {@code true} if a duplicate was found and handled (i.e., the file should be skipped),
-     * {@code false} if processing should continue.
+     * @return {@code true} if a duplicate was found and handled, {@code false} if processing should continue.
      */
     private boolean handleDuplicates(FileMaster fileMaster) {
         final String currentHash = fileMaster.getOriginalContentHash();
         final Integer bucketId = fileMaster.getGxBucketId();
 
-        // 1. Use a single query to find all files with the same hash in the same bucket.
         List<FileMaster> allFilesWithSameHash = fileMasterRepository.findAllByGxBucketIdAndOriginalContentHash(bucketId, currentHash);
-
-        // 2. Check for a successfully COMPLETED historical duplicate. This is the highest priority check.
         Optional<FileMaster> completedDuplicate = allFilesWithSameHash.stream()
-                .filter(fm -> !fm.getId().equals(fileMaster.getId())) // Exclude the current file
+                .filter(fm -> !fm.getId().equals(fileMaster.getId()))
                 .filter(fm -> fm.getFileProcessingStatus() == FileProcessingStatus.COMPLETED)
                 .findFirst();
 
         if (completedDuplicate.isPresent()) {
             FileMaster original = completedDuplicate.get();
-            log.warn("Bucket-scoped historical duplicate detected for FileMaster ID {}. A COMPLETED version (ID {}) already exists. Marking as SKIPPED.",
+            log.warn("Historical duplicate detected for FileMaster ID {}. A COMPLETED version (ID {}) already exists. Marking as SKIPPED.",
                     fileMaster.getId(), original.getId());
             fileMaster.setFileHash(original.getFileHash());
             updateFileStatusToSkipped(fileMaster, original.getId());
-            return true; // <<< SKIP
+            return true;
         }
 
-        // 3. Handle concurrent duplicates (race condition).
-        // Find all *active* files (including the current one) to see if there's a race.
         List<FileMaster> activeDuplicates = allFilesWithSameHash.stream()
                 .filter(fm -> fm.getFileProcessingStatus() == FileProcessingStatus.QUEUED ||
                               fm.getFileProcessingStatus() == FileProcessingStatus.IN_PROGRESS)
                 .toList();
 
         if (activeDuplicates.size() > 1) {
-            // A race condition is happening. Deterministically pick the one with the lowest ID to proceed.
-            long winningId = activeDuplicates.stream()
-                    .mapToLong(FileMaster::getId)
-                    .min()
-                    .orElse(fileMaster.getId()); // Should never be empty here
-
+            long winningId = activeDuplicates.stream().mapToLong(FileMaster::getId).min().orElse(fileMaster.getId());
             if (fileMaster.getId() != winningId) {
-                log.warn("Bucket-scoped concurrent duplicate detected for FileMaster ID {}. The winning processor is ID {}. Marking as SKIPPED.",
+                log.warn("Concurrent duplicate detected for FileMaster ID {}. The winning processor is ID {}. Marking as SKIPPED.",
                         fileMaster.getId(), winningId);
                 updateFileStatusToSkipped(fileMaster, winningId);
                 return true;
             }
         }
 
-        // 4. If we reach this point, it means:
-        //    a) No COMPLETED version exists.
-        //    b) Either there's no race condition, or this is the "winning" file in a race.
-        // This means any other duplicates must be in a FAILED, IGNORED, or other non-active state.
-        // Therefore, we should allow this file to be processed.
-        log.info("Duplicate hash found for FileMaster ID {}, but no COMPLETED or active concurrent version exists. Allowing processing.", fileMaster.getId());
+        log.info("No completed or winning concurrent duplicates found for FileMaster ID {}. Proceeding with processing.", fileMaster.getId());
         return false;
     }
 
+    /**
+     * Selects and executes the appropriate {@link FileHandler} for the given file.
+     */
     private List<ExtractedFileItem> findAndExecuteHandler(FileMaster fileMaster, Path tempFile) throws IOException, OfficeException {
         final Optional<FileHandler> handlerOpt = fileHandlerFactory.getHandler(fileMaster.getExtension());
-
         if (handlerOpt.isEmpty()) {
-            String errorMessage = "File type '%s' is not supported.".formatted(fileMaster.getExtension());
-            log.warn("[IGNORED] FileMaster ID {} will be ignored. Reason: {}", fileMaster.getId(), errorMessage);
+            String errorMessage = String.format("File type '%s' is not supported.", fileMaster.getExtension());
+            log.warn("No handler found for FileMaster ID {}. It will be ignored. Reason: {}", fileMaster.getId(), errorMessage);
             updateFileStatusToIgnored(fileMaster, errorMessage, fileMaster.getFileSize());
-            return null;
+            return Collections.emptyList();
         }
 
         final FileHandler handler = handlerOpt.get();
@@ -197,37 +190,27 @@ public class DocumentPipelineService {
     }
 
     /**
-     * Processes the results from a FileHandler, diversifying logic based on the number
-     * and type of items returned. This version correctly handles transformations by creating
-     * a new FileMaster record.
+     * Processes the results from a FileHandler, routing the outcome to the correct persistence logic.
      */
     private void processHandlerResults(List<ExtractedFileItem> newItems, FileMaster fileMaster) {
-        // Case 1: Handler did nothing or was a terminal transformer that didn't change content.
         if (newItems.isEmpty()) {
             createOrUpdateGxMasterRecord(fileMaster, null);
-        }
-        // Case 2: Handler optimized the file in-place.
-        else if (newItems.size() == 1 && newItems.get(0).getFilename().equals(fileMaster.getFileName())) {
-            final ExtractedFileItem transformedItem = newItems.get(0);
+        } else if (newItems.size() == 1 && newItems.getFirst().getFilename().equals(fileMaster.getFileName())) {
+            final ExtractedFileItem transformedItem = newItems.getFirst();
             final String newHash = DigestUtils.sha256Hex(transformedItem.getContent());
             if (!newHash.equals(fileMaster.getFileHash())) {
                 log.info("File content was optimized. Updating hash for FileMaster ID {}.", fileMaster.getId());
                 fileMaster.setFileHash(newHash);
             }
             createOrUpdateGxMasterRecord(fileMaster, transformedItem);
-        }
-        // Case 3 (OPTIMIZATION): Handler split the file into multiple parts.
-        // Bypasses the FileMaster queue and creates GxMaster records directly.
-        else if (newItems.size() > 1 && fileMaster.getExtension().equalsIgnoreCase("pdf")) {
-            log.info("PDF handler split FileMaster ID {} into {} parts. Creating GxMaster records directly.", newItems.size(), fileMaster.getId());
+        } else if (newItems.size() > 1 && fileMaster.getExtension().equalsIgnoreCase("pdf")) {
+            log.info("PDF handler split FileMaster ID {} into {} parts. Creating GxMaster records directly.", fileMaster.getId(), newItems.size());
             for (final ExtractedFileItem item : newItems) {
                 createGxMasterForSplitPart(fileMaster, item);
             }
-        }
-        // Case 4: Handler transformed or extracted one or more new files.
-        else {
+        } else {
             SourceType sourceType = (newItems.size() == 1) ? SourceType.TRANSFORMED : SourceType.EXTRACTED;
-            log.info("Handler produced {} new items from FileMaster ID {}. Creating a FileMaster for each.", newItems.size(), fileMaster.getId());
+            log.info("Handler produced {} new item(s) from FileMaster ID {}. Creating a FileMaster for each.", newItems.size(), fileMaster.getId());
             for (final ExtractedFileItem item : newItems) {
                 createFileMasterFromExtractedItem(item, fileMaster.getProcessingJob(), sourceType);
             }
@@ -235,47 +218,27 @@ public class DocumentPipelineService {
     }
 
     /**
-     * Creates a new {@link GxMaster} record for a split part of a larger source file.
-     * This method bypasses the FileMaster queue, uploads the content directly, and creates
-     * a GxMaster record linked back to the original source file, enabling a one-to-many relationship.
-     *
-     * @param sourceFile The original FileMaster that was the source of the split.
-     * @param splitPart  The content and filename of the individual part.
+     * Creates a new {@link GxMaster} record for a split part of a larger source file, bypassing
+     * the standard FileMaster queue for optimization.
      */
     private void createGxMasterForSplitPart(final FileMaster sourceFile, final ExtractedFileItem splitPart) {
         final byte[] content = splitPart.getContent();
         final long finalSize = content.length;
         final String processedFileName = splitPart.getFilename();
         final ProcessingJob parentJob = sourceFile.getProcessingJob();
-
-        // 1. Upload the content of the split part to the main 'files' S3 location.
-        final String s3Key = S3StorageService.constructS3Key(
-                processedFileName, sourceFile.getGxBucketId(),
-                parentJob.getId(), "files");
+        final String s3Key = S3StorageService.constructS3Key(processedFileName, sourceFile.getGxBucketId(), parentJob.getId(), "files");
         s3StorageService.upload(s3Key, new ByteArrayInputStream(content), finalSize);
-        log.debug("Uploaded split part '{}' for source FileMaster ID {} to S3 key: {}",
-                processedFileName, sourceFile.getId(), s3Key);
 
-        // 2. Determine the final status based on the job's settings.
         final boolean isSkipped = parentJob.isSkipGxProcess();
         final GxStatus targetStatus = isSkipped ? GxStatus.SKIPPED : GxStatus.QUEUED_FOR_UPLOAD;
         final UUID processId = isSkipped ? NIL_UUID : null;
+        final String gxFilesS3Key = s3StorageService.copyToGxFiles(s3Key, processedFileName, sourceFile.getGxBucketId(), parentJob.getId());
 
-        // 3. Copy the file to the final 'gx-files' location, which is the source for GX ingestion.
-        final String gxFilesS3Key = s3StorageService.copyToGxFiles(s3Key, processedFileName,
-                sourceFile.getGxBucketId(), parentJob.getId());
-
-        // 4. Build and save the new GxMaster record for this specific part.
         final GxMaster newGxRecord = GxMaster.builder()
-                .sourceFile(sourceFile) // IMPORTANT: This links back to the original source file.
-                .gxBucketId(sourceFile.getGxBucketId())
-                .fileLocation(gxFilesS3Key)
-                .processedFileName(processedFileName)
-                .fileSize(finalSize)
+                .sourceFile(sourceFile).gxBucketId(sourceFile.getGxBucketId()).fileLocation(gxFilesS3Key)
+                .processedFileName(processedFileName).fileSize(finalSize)
                 .extension(FilenameUtils.getExtension(processedFileName).toLowerCase())
-                .gxStatus(targetStatus)
-                .gxProcessId(processId)
-                .build();
+                .gxStatus(targetStatus).gxProcessId(processId).build();
         gxMasterRepository.save(newGxRecord);
 
         log.info("Successfully created GxMaster ID: {} for split part '{}' from source FileMaster ID: {}",
@@ -293,6 +256,10 @@ public class DocumentPipelineService {
         fileMaster.setDuplicateOfFileId(duplicateOfId);
     }
 
+    /**
+     * Creates or updates a {@link GxMaster} record for a source file, potentially with new content
+     * if it was transformed in-place by a handler.
+     */
     private void createOrUpdateGxMasterRecord(final FileMaster sourceFile, @Nullable final ExtractedFileItem transformedContent) {
         if (sourceFile.getFileProcessingStatus() == FileProcessingStatus.SKIPPED_DUPLICATE) {
             log.debug("Skipping GxMaster creation for SKIPPED_DUPLICATE FileMaster ID: {}", sourceFile.getId());
@@ -306,9 +273,7 @@ public class DocumentPipelineService {
         if (transformedContent != null) {
             finalSize = transformedContent.getContent().length;
             processedFileName = transformedContent.getFilename();
-            finalS3Key = S3StorageService.constructS3Key(
-                    processedFileName, sourceFile.getGxBucketId(),
-                    sourceFile.getProcessingJob().getId(), "files");
+            finalS3Key = S3StorageService.constructS3Key(processedFileName, sourceFile.getGxBucketId(), sourceFile.getProcessingJob().getId(), "files");
             s3StorageService.upload(finalS3Key, new ByteArrayInputStream(transformedContent.getContent()), finalSize);
         } else {
             finalS3Key = sourceFile.getFileLocation();
@@ -318,11 +283,11 @@ public class DocumentPipelineService {
         final boolean isSkipped = sourceFile.getProcessingJob().isSkipGxProcess();
         final GxStatus targetStatus = isSkipped ? GxStatus.SKIPPED : GxStatus.QUEUED_FOR_UPLOAD;
         final UUID processId = isSkipped ? NIL_UUID : null;
-
         final Optional<GxMaster> existingGxMaster = gxMasterRepository.findBySourceFileId(sourceFile.getId());
 
         if (existingGxMaster.isPresent()) {
             final GxMaster gxRecord = existingGxMaster.get();
+            log.info("Updating existing GxMaster record for FileMaster ID: {}", sourceFile.getId());
             gxRecord.setGxStatus(targetStatus);
             gxRecord.setFileSize(finalSize);
             gxRecord.setFileLocation(finalS3Key);
@@ -330,44 +295,30 @@ public class DocumentPipelineService {
             gxRecord.setGxProcessId(processId);
             gxMasterRepository.save(gxRecord);
         } else {
-            final String gxFilesS3Key = s3StorageService.copyToGxFiles(finalS3Key, processedFileName,
-                    sourceFile.getGxBucketId(), sourceFile.getProcessingJob().getId());
-
+            final String gxFilesS3Key = s3StorageService.copyToGxFiles(finalS3Key, processedFileName, sourceFile.getGxBucketId(), sourceFile.getProcessingJob().getId());
             final GxMaster newGxRecord = GxMaster.builder()
-                    .sourceFile(sourceFile)
-                    .gxBucketId(sourceFile.getGxBucketId())
-                    .fileLocation(gxFilesS3Key)
-                    .processedFileName(processedFileName)
-                    .fileSize(finalSize)
+                    .sourceFile(sourceFile).gxBucketId(sourceFile.getGxBucketId()).fileLocation(gxFilesS3Key)
+                    .processedFileName(processedFileName).fileSize(finalSize)
                     .extension(FilenameUtils.getExtension(processedFileName).toLowerCase())
-                    .gxStatus(targetStatus)
-                    .gxProcessId(processId)
-                    .build();
+                    .gxStatus(targetStatus).gxProcessId(processId).build();
             gxMasterRepository.save(newGxRecord);
+            log.info("Created new GxMaster record for FileMaster ID: {}", sourceFile.getId());
         }
     }
 
     /**
-     * Creates a new {@link FileMaster} record for an item that was generated by the system,
-     * either through extraction or transformation.
-     *
-     * @param item       The content and filename of the new item.
-     * @param parentJob  The parent ProcessingJob.
-     * @param sourceType The origin of this new file (EXTRACTED or TRANSFORMED).
+     * Creates a new {@link FileMaster} record for an item generated by the system (e.g., from a
+     * ZIP extraction or file transformation) and queues it for processing.
      */
     private void createFileMasterFromExtractedItem(final ExtractedFileItem item, final ProcessingJob parentJob, final SourceType sourceType) {
         final byte[] content = item.getContent();
         final String initialHash = DigestUtils.sha256Hex(content);
         final Integer gxBucketId = parentJob.getGxBucketId();
-
-        final List<FileMaster> duplicates = fileMasterRepository.findCompletedDuplicateInBucketByHash(
-                gxBucketId,
-                initialHash,
-                FileProcessingStatus.COMPLETED);
+        final List<FileMaster> duplicates = fileMasterRepository.findCompletedDuplicateInBucketByHash(gxBucketId, initialHash, FileProcessingStatus.COMPLETED);
 
         if (!duplicates.isEmpty()) {
-            log.warn("Bucket-scoped duplicate content detected for system-generated item '{}'. It matches existing FileMaster ID {}. Skipping creation.",
-                    item.getFilename(), duplicates.get(0).getId());
+            log.warn("Duplicate content detected for system-generated item '{}'. It matches existing FileMaster ID {}. Skipping creation.",
+                    item.getFilename(), duplicates.getFirst().getId());
             return;
         }
 
@@ -375,23 +326,17 @@ public class DocumentPipelineService {
         s3StorageService.upload(newS3Key, new ByteArrayInputStream(content), content.length);
 
         final FileMaster newFileMaster = FileMaster.builder()
-                .processingJob(parentJob)
-                .gxBucketId(gxBucketId)
-                .fileName(item.getFilename())
-                .fileSize((long) content.length)
-                .extension(FilenameUtils.getExtension(item.getFilename()).toLowerCase())
-                .fileHash(initialHash)
-                .originalContentHash(initialHash)
-                .fileLocation(newS3Key)
-                .sourceType(sourceType) // Set the correct source type
-                .fileProcessingStatus(FileProcessingStatus.QUEUED)
-                .build();
+                .processingJob(parentJob).gxBucketId(gxBucketId).fileName(item.getFilename())
+                .fileSize((long) content.length).extension(FilenameUtils.getExtension(item.getFilename()).toLowerCase())
+                .fileHash(initialHash).originalContentHash(initialHash).fileLocation(newS3Key)
+                .sourceType(sourceType).fileProcessingStatus(FileProcessingStatus.QUEUED).build();
         fileMasterRepository.save(newFileMaster);
         log.info("Created new {} FileMaster ID: {} for item '{}'.", sourceType, newFileMaster.getId(), item.getFilename());
 
         TransactionSynchronizationManager.registerSynchronization(new TransactionSynchronization() {
             @Override
             public void afterCommit() {
+                log.info("Queueing new system-generated FileMaster ID: {} for processing.", newFileMaster.getId());
                 sqsTemplate.send(fileQueueName, Map.of("fileMasterId", newFileMaster.getId()));
             }
         });
